package OthelloBoard;
message BoardState 
{
    required uint32 stateID = 1;
    required uint64 BlackPieces = 2;
    required uint64 WhitePieces = 3;
}